Fix Tahoe style sidedock collapse

--- a/src/app/sidedock-alt.scss
+++ b/src/app/sidedock-alt.scss
@@ -71,7 +71,7 @@ body:not(.is-mobile):not(.mod-windows:not(.windows-mode-off)).sidedock-alt {
   .mod-sidedock.mod-left-split {
     z-index: var(--layer-sidedock);
     border-radius: var(--radius-window);
-    display: flex !important;
+    display: flex;
     margin: 8px 0 8px 8px;
     height: -webkit-fill-available;
 
